mdapioutput/objects/HardingPoint__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>GRA by Harding Point Settings</description>
    <label>GRAX Settings</label>
    <fields>
        <fullName>ApiToken__c</fullName>
        <description>GRAX Settings : Heroku Setting ENGAGEMENTGRAPH_APITOKEN</description>
        <inlineHelpText>GRAX Settings : Heroku Setting ENGAGEMENTGRAPH_APITOKEN</inlineHelpText>
        <label>ApiToken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GatewayToken__c</fullName>
        <description>GRAX Settings : Heroku Setting ENGAGEMENTGRAPH_GATEWAYTOKEN</description>
        <inlineHelpText>GRAX Settings : Heroku Setting ENGAGEMENTGRAPH_GATEWAYTOKEN</inlineHelpText>
        <label>GatewayToken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LicenseToken__c</fullName>
        <description>GRAX Settings : Heroku Setting ENGAGEMENTGRAPH_LICENSETOKEN</description>
        <inlineHelpText>GRAX Settings : Heroku Setting ENGAGEMENTGRAPH_LICENSETOKEN</inlineHelpText>
        <label>LicenseToken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>graphdburl__c</fullName>
        <description>GRAX Settings : Heroku Setting GRAPHENEDB_URL</description>
        <inlineHelpText>GRAX Settings : Heroku Setting GRAPHENEDB_URL</inlineHelpText>
        <label>graphdburl</label>
        <type>Url</type>
    </fields>
</CustomObject>